tests/neg/i10603a.scala
object Test {
  val x = implicitly[List[Boolean]] // error
}
