tests/neg/i10603a.check
-- Error: tests/neg/i10603a.scala:2:20 ---------------------------------------------------------------------------------
2 |  val x = implicitly[List[Boolean]] // error
  |                    ^
  |           No given instance of type List[Boolean] was found for parameter e of method implicitly in object Predef
